--- a/src/components/3-main/main.css
+++ b/src/components/3-main/main.css
@@ -23,6 +23,7 @@ main section.left-section.flex {
   gap: 10px;
   justify-content: center;
   padding: 10px 0;
+ 
 }
 
 main section.left-section.flex button {
@@ -47,7 +48,7 @@ main section.left-section.flex button.active {
   font-weight: bold;
   letter-spacing: 0.6px;
   padding: 0.8rem 0;
-  border: 1px solid var(--blue);
+  border: 1px solid aqua;
 }
 
 .light main section.left-section.flex button.active {
@@ -59,12 +60,36 @@ main section.left-section.flex button.active {
 ================================== */
 
 main section.right-section.flex {
+  position:relative;
+  border-top: 1px solid aqua;
   justify-content: center;
   flex-wrap: wrap;
   column-gap: 16px;
   row-gap: 2rem;
   width: 100%;
+  max-height: 50rem;
+  overflow: auto;
 }
+
+main section.right-section::before
+{
+  content:"";
+  position:sticky;
+  width :100%;
+  height : 25px;
+  top : 0px;
+  background-image:linear-gradient(to bottom,
+    rgba(255, 255, 255, 0.3),
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.09),
+    rgba(255, 255, 255, 0.08),
+    rgba(255, 255, 255, 0.05),
+    rgba(255, 255, 255, 0.03),
+    rgba(255, 255, 255, 0.01)
+  );
+  Z-index:1000;
+}
+
 
 .card {
   box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.16), 1px 1px 1px rgba(0, 0, 0, 0.15);
@@ -92,6 +117,9 @@ main section.right-section.flex {
 
 .card img {
   border-radius: 5px;
+  height : 170px;
+  object-fit:cover;
+  opject-position:top;
 }
 
 .card .box {
