update after5 prevent scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -152,33 +152,7 @@ html {
   scrollbar-color: #8c8b8b var(--secondary);
 }
 
-.scroll2Top {
-  background-color: rgba(25, 118, 210, 0.85);
-  width: 2.6rem;
-  height: 2.6rem;
-  border-radius: 50%;
-  position: fixed;
-  bottom: 2rem;
-  right: 3%;
-  text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  font-size: 1.25rem;
-}
-
-.scroll2Top:hover {
-  background-color: rgb(25, 118, 210);
-}
-
-@media (max-width: 600px) {
-  .container {
-    width: 98%;
-    padding: 0 var(--container-padding);
-  }
-
-  .scroll2Top {
-    width: 2.2rem;
-    height: 2.2rem;
-    opacity: 0.6;
-    font-size: 1rem;
-  }
+/* Scroll-lock to prevent page scrolling */
+.scroll-lock {
+  overflow: hidden;
 }
