--- a/src/index.css
+++ b/src/index.css
@@ -156,3 +156,33 @@ html {
 .scroll-lock {
   overflow: hidden;
 }
+
+
+.scroll2Top {
+  background-color: rgba(40, 243, 250,0.85);
+  width: 2.6rem;
+  height: 2.6rem;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 2rem;
+  right: 3%;
+  text-align: center;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.scroll2Top:hover {
+  background-color: rgb(48, 201, 207);
+}
+
+@media (max-width: 600px) {
+  .container {
+    width: 98%;
+    padding: 0 var(--container-padding);
+  }
+
+  .scroll2Top {
+    width: 2.7rem;
+    height: 2.7rem;
+    opacity: 0.6;
+  }
+}
